--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,6 +1,6 @@
 {
   "accentColor": "",
-  "cssTheme": "Atom",
+  "cssTheme": "Obsidian Nord",
   "theme": "obsidian",
   "textFontFamily": "Consolas",
   "interfaceFontFamily": "Consolas"
