--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -5,5 +5,12 @@
     "landscape": false,
     "margin": "0",
     "downscalePercent": 100
-  }
+  },
+  "alwaysUpdateLinks": true,
+  "showLineNumber": true,
+  "rightToLeft": false,
+  "spellcheck": false,
+  "newFileLocation": "folder",
+  "newFileFolderPath": "0 Origin",
+  "attachmentFolderPath": "5 Attachments"
 }
